<resources>
    <string name="app_name">Layout1</string>
    <string name="Email">Email</string>
    <string name="Mobile">Mobile</string>
    <string name="Date_Of_Birth">DateofBirth</string>
    <string name="Father_Name">Father Name</string>
    <string name="Mobile_Father">Fathers Mobile No</string>
    <string name="Annual_Salary">Annual Salary</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Permanent_Address">Permanent Address</string>
    <string name="Mumbai_Address">Mumbai Address</string>
    <string name="Occupation">Occupation</string>
    <string name="ID">ID</string>
    <string name="HRDetails">HRDetails</string>
    <string name="Hiring_City">Hiring City</string>
    <string name="Fellowship_Period">Felowship Period</string>
    <string name="BL_Start_Date">Bl start date</string>
    <string name="Company_Start_Date">Company start date</string>
    <string name="Company_End_Date">Company end date</string>
    <string name="Engg_Contract_Initiated">Engg Contract Initiated</string>
    <string name="Engg_Contarct_Signed">Engg Contract Signed</string>
    <string name="HR_Details">HR Details</string>
    <string name="Comp_Contract_Initiated">Comp Contract Initiated</string>
    <string name="Comp_Contract_Signed">Comp Contract Signed</string>
    <string name="Contact_Signed_Date">Contract Signed Date</string>
    <string name="Initiate_Transfer">Initiated Transfer</string>
    <string name="Referal">Referal</string>
    <string name="Return_Details">Retusrn Details</string>
    <string name="Original_Documents">Original Documents</string>
    <string name="Certificate_Collected">Certificate Collected</string>
    <string name="Provisional_Certificate">Provisional Certificate</string>
    <string name="Other_Documents">Other Documents</string>
    <string name="Certificate_Submission">Certificate Submission</string>
    <string name="Transfer_Date">Transfer Date</string>
    <string name="Banking_Details">Banking Details</string>
    <string name="Tracking_Details">Tracking Details</string>
    <string name="Tech_Stack">Tech Stack</string>
    <string name="Bridge_Labz_Start_Date">Bridgelabz start Date</string>
    <string name="Bridge_Labz_End_Date">Bridgelabx end Date</string>
    <string name="Current_Week">Current Week</string>
    <string name="Number_Of_Weeks_Left">Number of weeks left</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="Profile_Details">Profile Details</string>
    <string name="PUC">PUC</string>
    <string name="Degree">Degree</string>
    <string name="Branch">Branch</string>
    <string name="Year_Of_Passing">Year of Passing</string>
    <string name="Aggregate">Aggregate</string>
    <string name="Final_Year">Final year</string>
    <string name="Training_Institute">Training Institute</string>
    <string name="Training_Duration">Training Duration</string>
    <string name="Reason">Reason</string>
    <string name="Pay_Salary">Pay Salary</string>
    <string name="IFSC_Code">IFSC Code</string>
    <string name="Bank_Name">Bank Name</string>
    <string name="Account_Number">Account Number</string>

</resources>
